chore: snake to camel case and their definition
