# src/modules/users/dtos/ICreateTokenDTO.ts
@@ -1,9 +1,9 @@
 import { EType } from "../infra/typeorm/entities/UserTokens";
 
 export interface ICreateTokenDTO {
-  refresh_token: string;
+  refreshToken: string;
   type: EType;
-  expires_at: Date;
-  created_by_ip: string;
-  user_id: string;
+  expiresAt: Date;
+  createdByIp: string;
+  userId: string;
 }
