# src/shared/infra/http/documentation/swagger.json
@@ -140,7 +140,7 @@
               "Set-Cookie": {
                 "schema": {
                   "type": "string",
-                  "example": "refresh_token=abcde12345; Expires=Sat, 23 Jul 2022 09:29:15 GMT; Path=/; HttpOnly; SameSite=Lax; Domain=localhost"
+                  "example": "refreshToken=abcde12345; Expires=Sat, 23 Jul 2022 09:29:15 GMT; Path=/; HttpOnly; SameSite=Lax; Domain=localhost"
                 }
               }
             }
@@ -178,7 +178,7 @@
               "Set-Cookie": {
                 "schema": {
                   "type": "string",
-                  "example": "refresh_token=abcde12345; Expires=Sat, 23 Jul 2022 09:29:15 GMT; Path=/; HttpOnly; SameSite=Lax; Domain=localhost"
+                  "example": "refreshToken=abcde12345; Expires=Sat, 23 Jul 2022 09:29:15 GMT; Path=/; HttpOnly; SameSite=Lax; Domain=localhost"
                 }
               }
             }
@@ -259,14 +259,14 @@
         "email": {
           "type": "string"
         },
-        "avatar_url": {
+        "avatarUrl": {
           "type": "string"
         },
-        "created_at": {
+        "createdAt": {
           "type": "string",
           "format": "date-time"
         },
-        "updated_at": {
+        "updatedAt": {
           "type": "string",
           "format": "date-time"
         }
@@ -294,7 +294,7 @@
       "cookieAuth": {
         "type": "apiKey",
         "in": "cookie",
-        "name": "refresh_token"
+        "name": "refreshToken"
       }
     }
   }
